--- a/client/partials/login.html
+++ b/client/partials/login.html
@@ -1,12 +1,20 @@
 <div>
-  <h3>Login</h3>
-  <form>
-    <input placeholder="First Name">
+  <h3>Register</h3>
+  <form ng-submit='LC.register()'>
+    {{errors}}
+    <input ng-model='LC.registration.email' type="email" placeholder="Email Address">
+    <input ng-model='LC.registration.firstName' placeholder="First Name">
+    <input ng-model='LC.registration.lastName' placeholder="Last Name">
+    <input ng-model='LC.registration.password' type="password" placeholder="Password">
+    <input ng-model='LC.registration.confirm' type="password" placeholder="Confirm Password">
+    <input type="submit" value="Register User">
   </form>
 </div>
 <div>
-  <h3>Register</h3>
-  <form>
-
+  <h3>Login</h3>
+  <form ng-submit='LC.login()'>
+    <input ng-model='LC.userLogin.email' placeholder="Email Address">
+    <input ng-model='LC.userLogin.password' type="password" placeholder='Password'>
+    <input type="submit" value='Login'>
   </form>
 </div>
